--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
 		"minishell.h": "c",
 		"typeinfo": "c",
 		"cstdlib": "c",
-		"libft.h": "c"
+		"libft.h": "c",
+		"string": "c",
+		"string_view": "c",
+		"ranges": "c"
 	}
 }
