--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,6 @@
 		"minishell.h": "c",
 		"typeinfo": "c",
 		"cstdlib": "c",
-		"libft.h": "c",
-		"string": "c",
-		"string_view": "c",
-		"ranges": "c"
+		"libft.h": "c"
 	}
 }
